--- a/timeline.html
+++ b/timeline.html
@@ -9,19 +9,16 @@
 </head>
 <body>
     <div class="top-container heading">
-        <div class="sidebar" id="mySidebar">
-            <div class="closebtn" onclick="closeNav()"><img src="images/close-icon.png" width="20"></div>
-            <span style="font-size:22px;"><b>Main Menu</b></span>
-            <hr style="height:2px; border-width:0; background-color:gray">
-            <div class="dropdown-content" id="boxlink"></div>
-            <script src="script.js"></script>
-        </div>
-        <div class="backsidebar" id="mybacksidebar" onclick="closeNav()"></div>
+        <div class="sidebar" id="sidebar"></div>
+		<script src="script.js"></script>
+        <div class="backsidebar" id="backsidebar" onclick="closeNav()"></div>
         <div class="column" style="padding-right:30px;">
-        <div class="openbtn" onclick="openNav()"><img src="images/menu-icon.jpg" width="30"></div>
+			<div class="openbtn" onclick="openNav()"><img src="images/menu-icon.jpg" width="30"></div>
         </div>
-        <img src="images/blank-profile.jpg" width="40" style="border-radius: 50%; vertical-align:middle; margin-right:20px; float:left;">
-        <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
+		<div class="column" style="padding-right:20px;">
+			<img src="images/blank-profile.jpg" width="40" style="border-radius:50%; padding-top:2px">
+		</div>
+        <div style="font-size:30px; color:white; padding"><b>SEBUAH WEBSITE</b></div>
         <div class="clearfix"></div>
     </div>
     <div class="container">
@@ -37,7 +34,8 @@
             2. <a href="#2">Tahun 2020</a><br>
             3. <a href="#3">Tahun 2021</a><br>
             4. <a href="#4">Tahun 2022</a><br>
-            5. <a href="#5">Tahun 2023</a>
+            5. <a href="#5">Tahun 2023</a><br>
+			6. <a href="#6">Tahun 2024</a>
             </p>
         </div>
         <br>
@@ -47,9 +45,9 @@
         <div class="container2">
             <p>Pada tahun 2020 ini</p>
             <ul>
-                <li>Juli 2020<br>Naik ke kelas 7<br>Mengerjakan Dream Board</li><br>
-                <li>Agustus 2020<br>Membuat program Number Type Detection</li><br>
-                <li>Desember 2020</li>
+                <li><b>Juli 2020</b><br>Naik ke kelas 7<br>Mengerjakan Dream Board</li><br>
+                <li><b>Agustus 2020</b><br>Membuat program Number Type Detection</li><br>
+                <li><b>Desember 2020</b></li>
             </ul>
         </div><br>
 
@@ -57,14 +55,15 @@
         <div class="container2">
             <p>Pada tahun 2021 ini</p>
             <ul>
-                <li>Januari 2021</li>
-                <li>April 2021<br>Membuat program Equation Solver</li><br>
-                <li>Juli 2021</li>
-                <li>September 2021</li>
+                <li><b>Januari 2021</b></li>
+                <li><b>April 2021</b><br>Membuat program Equation Solver</li><br>
+                <li><b>Juli 2021</b></li>
+                <li><b>September 2021</b></li>
             </ul>
         </div><br>
 
         <p class="heading" id="4" style="font-size: 25px"><b>4. Tahun 2022</b></p>
+		
         <p class="heading" id="5" style="font-size: 25px"><b>5. Tahun 2023</b></p>
         <br>
         <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
@@ -82,8 +81,11 @@
 		        <a href="projects.html">Projects</a>
             </div>
             <div class="clearfix"></div><br>
-        </div>
-        <br>
+        </div><br>
+		
+		<p class="heading" id="5" style="font-size: 25px"><b>5. Tahun 2023</b></p>
+		<br><br>
+		
         <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
