--- a/blog.html
+++ b/blog.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <div class="top-container heading">
-        <div class="dropdown" style="margin-right:20px; float:left;">
-            <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
-            <div class="dropdown-content" id="boxlink"></div>
-            <script src="script.js"></script>
+        <div class="sidebar" id="sidebar"></div>
+		<script src="script.js"></script>
+        <div class="backsidebar" id="backsidebar" onclick="closeNav()"></div>
+        <div class="column" style="padding-right:30px;">
+			<div class="openbtn" onclick="openNav()"><img src="images/menu-icon.jpg" width="30"></div>
         </div>
-        <img src="images/blank-profile.jpg" width="40" style="border-radius: 50%; vertical-align:middle; margin-right:20px; float:left;">
-        <!-- <font size="6" color="white"><b>SEBUAH WEBSITE</b></font> -->
+		<div class="column" style="padding-right:20px;">
+			<img src="images/blank-profile.jpg" width="40" style="border-radius:50%; padding-top:2px">
+		</div>
         <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
         <div class="clearfix"></div>
     </div>
@@ -132,11 +134,25 @@
             Mata pelajaran yang paling saya sukai adalah Matematika. Sejak dari kecil nilai matematika saya yang paling tinggi dibanding mata pelajaran lain.
             Banyak lomba yang sudah saya ikuti. Lomba antar sekolah baik itu di Mall, Open House Sekolah maupun tingkat Olimpiade. Kadang saya dapat juara terkadang juga tidak.
             Itulah mengapa rajin les matematika sama guru matematika, agar semakin rajin dan giat belajar, sehingga bisa mendapatkan juara untuk berikutnya.
+            <br><br>
             Kejuaraan yang paling berkesan buat saya, ketika SD kelas 5, untuk tingkat OSN, saya masuk semifinal; dan baru-baru ini, di bulan Maret 2023 saya mendapat emas Olimpiade tingkat provinsi Jawa Tengah dan Jogja.
             Dan mendapatkan piagam dan medali emas, juara di tingkat emas bareng Guru Matematika disampingnya, sehingga akan difoto dan dikirim ke Instagram.
+            <br><br>
             Hal itu, makin menambah wawasan saya, semakin memacu saya untuk lebih giat dan tekun lagi latihan dan mengikuti berbagai kompetisi supaya dapat meningkatkan kemampuan matematika saya.
             </p>
-            <br>
+            <p>Selain itu, ada juga mendapat prestasi lainnya yaitu:</p>
+            <ul>
+                <li>Konser Piano</li>
+                <li>Lomba KMT 2018</li>
+                <li>Lomba OSN tingkat SD 2019</li>
+                <li>Lomba UNNES tingkat SD 2019</li>
+                <li>Lomba ORC matematika</li>
+                <li>Lomba UNNES 2023</li>
+                <li>Lomba EMC</li>
+                <li>Lomba Singapore Math Challenge (SMC)</li>
+                <li>Lomba UNDIP UMC di Semarang</li>
+                <li>Lomba UNY di Jogja</li>
+            </ul><br>
         </div>
         <p class="heading" id="4" style="font-size: 25px"><b>4. Retreat Eagle School 2023</b></p>
         <div class="container2">
@@ -207,8 +223,8 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 3 Okt 2023<br>
-        Copyright © 2023 by Devan
+        Terakhir diupdate: 8 Mar 2024<br>
+        Copyright © 2024 by Devan
         </p>
     </footer>
 </body>
