--- a/timeline.html
+++ b/timeline.html
@@ -25,8 +25,13 @@
         <br>
         <div class="heading" id="home" style="font-size:50px; color:#146480;"><b>Timeline dan Sejarah</b></div>
         <p>
-        Timeline dan Sejarah berisi kejadian timeline yang sudah terjadi, baik dalam hal sekolah maupun perjalanan.
-        </p>
+        Timeline dan Sejarah berisi kejadian timeline yang sudah terjadi, baik dalam hal sekolah maupun perjalanan.<br>
+        Ada berbagai timeline dari SD sampai sekarang, ada di halaman ini.
+		<br><br>
+		Selain itu, ada juga timeline khusus matematika. Ini linknya:<br>
+		<a href="timeline-math.html">Timeline Matematika</a>
+		</p><br>
+		
         <p class="heading" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
             <p>
@@ -65,7 +70,10 @@
         <p class="heading" id="4" style="font-size: 25px"><b>4. Tahun 2022</b></p>
 		
         <p class="heading" id="5" style="font-size: 25px"><b>5. Tahun 2023</b></p>
-        <br>
+		
+		<p class="heading" id="6" style="font-size: 25px"><b>6. Tahun 2024</b></p>
+		<br><br>
+        
         <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
         <div class="box heading">
             <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
@@ -83,15 +91,12 @@
             <div class="clearfix"></div><br>
         </div><br>
 		
-		<p class="heading" id="5" style="font-size: 25px"><b>5. Tahun 2023</b></p>
-		<br><br>
-		
         <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 6 Mar 2024<br>
+        Terakhir diupdate: 10 Mar 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
