--- a/blog.html
+++ b/blog.html
@@ -26,6 +26,8 @@
         <!-- <font face="Open Sans Black" size="6" color="#002080"><b>BLOG DAN CERITA</b></font> -->
         <div class="heading" id="home" style="font-size:50px; color:#146480;"><b>Blog dan Cerita</b></div>
         <p style="font-size: 22px">
+            <b class="heading">Halaman 1 dari 3</b>
+            <br><br>
             Cerita dan pengalaman saya yang pernah dirasakan.<br>
             Dari masa lalu hingga kini, semua cerita sudah menjadi hal yang berharga.<br>
             Inilah beberapa cerita yang ada di blog ini.
@@ -42,6 +44,7 @@
             </p>
         </div>
         <br>
+        
         <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA CERITA</b></u></p>
         <p class="heading" id="1" style="font-size: 25px"><b>1. Holiday to Bromo</b></p>
         <div class="container2">
@@ -89,8 +92,8 @@
             * <a href="https://id.wikipedia.org/wiki/Jawa_Timur">Wikipedia - Jawa Timur</a><br>
             <br>
             </p>
-
         </div>
+
         <p class="heading" id="2" style="font-size: 25px"><b>2. About Me Devan - Descriptive Text</b></p>
         <div class="container2">
             <p>
@@ -124,6 +127,7 @@
             </p>
             <br>
         </div>
+
         <p class="heading" id="3" style="font-size: 25px"><b>3. Memenangkan Lomba Besar</b></p>
         <div class="container2">
             <div class="image">
@@ -154,6 +158,7 @@
                 <li>Lomba UNY di Jogja</li>
             </ul><br>
         </div>
+
         <p class="heading" id="4" style="font-size: 25px"><b>4. Retreat Eagle School 2023</b></p>
         <div class="container2">
             <p>
@@ -185,22 +190,40 @@
             </p>
             <br>
         </div>
+
         <p class="heading" id="5" style="font-size: 25px"><b>5. Holiday to Bali</b></p>
         <div class="container2">
-            <p>
+            <!-- <p>
             Dengan tulisan bahasa Inggris
             <br><br>
-            In June ????, my family and I went on vacation to <b>Bali</b>.<br>
+            In June ????, my family and I went on vacation to <b>Bali</b>.<br> -->
+            <p>
+            Pada bulan Juni 2017, keluarga saya pergi liburan ke Bali. Lalu memesan hotel dekat pantai Kuta, dan makan malamnya dekat hotel. Lalu besoknya ke Pantai Kuta, dan kita naik kapal kecil ...<br>
             [Under Construction]
             </p>
             <br>
         </div>
-        <p class="heading" id="6" style="font-size: 25px"><b>6. Holiday to Jakarta & Bandung</b></p>
-        <p class="heading" id="7" style="font-size: 25px"><b>7. Cerita tentang Talent</b></p>
-        <p class="heading" id="8" style="font-size: 25px"><b>8. Masa depan dan impian</b></p>
-        <p class="heading" id="9" style="font-size: 25px"><b>9. [Under Construction]</b></p>
+
+        <p class="heading" id="6" style="font-size: 25px"><b>6. Kumpulan Prestasi Devan</b></p>
+        <p class="heading" id="6" style="font-size: 25px"><b>7. Holiday to Jakarta & Bandung</b></p>
+        <p class="heading" id="7" style="font-size: 25px"><b>8. Cerita tentang Talent</b></p>
+        <p class="heading" id="8" style="font-size: 25px"><b>9. Masa depan dan impian</b></p>
+        <p class="heading" id="9" style="font-size: 25px"><b>10. [Under Construction]</b></p>
         <br>
-        <p class="heading" style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+
+        <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK</b></u></p>
+        <p class="heading" style="font-size:22px; margin-bottom:10px;"><b>Halaman</b></p>
+        <div class="pagination heading">
+            <!-- <a href="#">&laquo;</a> -->
+            <!-- <a href="javascript:void(0)">3</a> -->
+            <!-- <a>&lt;</a> -->
+            <a class="nonclick">&lt;</a>
+            <a class="active">1</a>
+            <a href="blog2.html">2</a>
+            <a href="blog3.html">3</a>
+            <a href="blog2.html">&gt;</a>
+            <!-- <a href="#">&raquo;</a> -->
+        </div><br><br>
         <div class="box heading">
             <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
             <div class="btn-group">
@@ -223,7 +246,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 8 Mar 2024<br>
+        Terakhir diupdate: 29 Mar 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
