--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="column" style="padding-right:20px;">
 			<img src="images/blank-profile.jpg" width="40" style="border-radius:50%; padding-top:2px">
 		</div>
-        <div style="font-size:30px; color:white; padding"><b>SEBUAH WEBSITE</b></div>
+        <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
         <div class="clearfix"></div>
     </div>
     <div class="container">
@@ -76,15 +76,12 @@
                 </div>
             </li>
             <li style="color:darkgreen">Fakta dan Informasi (HTML) - Sedang dibuat</li>
-            <li style="color:darkgreen">Timeline dan Sejarah (HTML) - Sedang dibuat</li>
             <li style="color:#808000">Foto dan Kenangan (HTML) - Mau dibuat</li>
-            <li style="color:darkgreen">Gambar (HTML) - Sedang dibuat</li>
-            <li>Pelajaran (HTML & Python) - <span style="color:maroon">v1.7.4</span></li>
-            <li>Bangun 3 Dimensi (Python)</li>
-            <li>Labirin / Maze (HTML & Python) - <span style="color:maroon">v1.8</span></li>
-            <li>Explore (HTML & Python)</li>
-            <li>BMI Calculator (HTML)</li>
-            <li>Input dalam Matematika (HTML) - <span style="color:maroon">v1.9</span></li>
+            <li style="color:darkgreen">Pelajaran - Sedang dibuat</li>
+            <li style="color:#808000">Labirin / Maze (Python) - Mau dibuat</li>
+            <li>Bangun 3 Dimensi (HTML & Python)</li>
+            <li>Kalkulator Sederhana (HTML) - <span style="color:maroon">v1.8.1</span></li>
+            <li>Explore (HTML) - <span style="color:maroon">v1.8.3</span></li>
         </ul><br>
         <p>Link luar terdiri dari beberapa link yang mungkin suka, dan terkait di halaman ini.</p>
         <p class="heading" style="font-size:25px; color:#000080;">
@@ -177,7 +174,7 @@
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
         <br>
         <hr style="height:2px; border-width:0; background-color:gray">
-        <p class="heading" style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
         <!--
         <div class="btn-group">
         <a href="blog.html">Blog</a> |
@@ -213,8 +210,8 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 6 Mar 2024<br>
-        Version: 1.7.4<br>
+        Terakhir diupdate: 29 Mar 2024<br>
+        Version: 1.8<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
