--- a/blog.html
+++ b/blog.html
@@ -157,6 +157,11 @@
                 <li>Lomba UNDIP UMC di Semarang</li>
                 <li>Lomba UNY di Jogja</li>
             </ul><br>
+            <p>Selain itu, ada juga link dimana sempat masuk berita:</p>
+            <ul>
+                <li><a href="https://beritajateng.tv/sampai-dapat-penghargaan-pkbm-eagle-school-buktikan-sekolah-kesetaraan-tak-kalah-dengan-formal/">Sampai Dapat Penghargaan, PKBM Eagle School Buktikan Sekolah Kesetaraan Tak Kalah dengan Formal</a></li>
+                <li><a href="https://beritajateng.tv/jago-pemrograman-inilah-devan-daniel-siswa-gifted-asal-semarang-yang-kuasai-python-sejak-smp/">Jago Pemrograman, Inilah Devan Daniel, Siswa 'Gifted' Asal Semarang yang Kuasai Python Sejak SMP</a></li>
+            </ul><br>
         </div>
 
         <p class="heading" id="4" style="font-size: 25px"><b>4. Retreat Eagle School 2023</b></p>
@@ -205,10 +210,10 @@
         </div>
 
         <p class="heading" id="6" style="font-size: 25px"><b>6. Kumpulan Prestasi Devan</b></p>
-        <p class="heading" id="6" style="font-size: 25px"><b>7. Holiday to Jakarta & Bandung</b></p>
-        <p class="heading" id="7" style="font-size: 25px"><b>8. Cerita tentang Talent</b></p>
-        <p class="heading" id="8" style="font-size: 25px"><b>9. Masa depan dan impian</b></p>
-        <p class="heading" id="9" style="font-size: 25px"><b>10. [Under Construction]</b></p>
+        <p class="heading" id="7" style="font-size: 25px"><b>7. Holiday to Jakarta & Bandung</b></p>
+        <p class="heading" id="8" style="font-size: 25px"><b>8. Cerita tentang Talent</b></p>
+        <p class="heading" id="9" style="font-size: 25px"><b>9. Masa depan dan impian</b></p>
+        <p class="heading" id="10" style="font-size: 25px"><b>10. [Under Construction]</b></p>
         <br>
 
         <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK</b></u></p>
@@ -246,7 +251,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 29 Mar 2024<br>
+        Terakhir diupdate: 3 Mei 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
