--- a/blog.html
+++ b/blog.html
@@ -10,14 +10,14 @@
 <body>
     <div class="top-container heading">
         <div class="sidebar" id="sidebar"></div>
-		<script src="script.js"></script>
+        <script src="script.js"></script>
         <div class="backsidebar" id="backsidebar" onclick="closeNav()"></div>
         <div class="column" style="padding-right:30px;">
-			<div class="openbtn" onclick="openNav()"><img src="images/menu-icon.jpg" width="30"></div>
+            <div class="openbtn" onclick="openNav()"><img src="images/menu-icon.jpg" width="30"></div>
         </div>
-		<div class="column" style="padding-right:20px;">
-			<img src="images/blank-profile.jpg" width="40" style="border-radius:50%; padding-top:2px">
-		</div>
+        <div class="column" style="padding-right:20px;">
+            <img src="images/blank-profile.jpg" width="40" style="border-radius:50%; padding-top:2px">
+        </div>
         <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
         <div class="clearfix"></div>
     </div>
@@ -197,21 +197,40 @@
         </div>
 
         <p class="heading" id="5" style="font-size: 25px"><b>5. Holiday to Bali</b></p>
-        <div class="container2">
-            <!-- <p>
-            Dengan tulisan bahasa Inggris
-            <br><br>
-            In June ????, my family and I went on vacation to <b>Bali</b>.<br> -->
+        <div class="container2">            
             <p>
-            Pada bulan Juni 2017, keluarga saya pergi liburan ke Bali. Lalu memesan hotel dekat pantai Kuta, dan makan malamnya dekat hotel. Lalu besoknya ke Pantai Kuta, dan kita naik kapal kecil ...<br>
-            [Under Construction]
+            Pada bulan Juni 2017, keluarga saya pergi liburan ke Bali.
+            </p>
+            <div class="image">
+                <div class="gallery" style="width:300px;">
+                    <!-- <img src="images/blog/IMG_4550.JPG" style="filter:blur(3px);" oncontextmenu="return false;"> -->
+                    <img src="images/IMG_4550.JPG" style="filter:blur(3px);" oncontextmenu="return false;">
+                    <div class="desc">Gambar 1 <span style="color:red">(*)</span></div>
+                </div>
+                <div class="gallery" style="width:300px;">
+                    <img src="images/IMG_4617.JPG" style="filter:blur(3px);" oncontextmenu="return false;">
+                    <div class="desc">Gambar 2 <span style="color:red">(*)</span></div>
+                </div>
+                <div class="clearfix"></div>
+                <!-- <details>
+                    <summary>Klik disini</summary>
+                </details> -->
+            </div>
+            <p>
+                <!-- <span style="color:red">* Untuk sementara ini, foto ini diblur terlebih dahulu.</span><br><br> -->
+                Lalu memesan hotel dekat pantai Kuta, dan makan malamnya dekat hotel. Lalu besoknya ke Pantai Kuta, dan kita naik kapal kecil ...<br>
+                [Under Construction]
             </p>
             <br>
         </div>
 
-        <p class="heading" id="6" style="font-size: 25px"><b>6. Kumpulan Prestasi Devan</b></p>
+        <p class="heading" id="6" style="font-size: 25px"><b>6. Pemenang Karya Video Sekolah dari Hari Pendidikan Nasional</b></p>
+        <div class="container2">            
+            <p>[Under Construction]</p><br>
+        </div>
+
         <p class="heading" id="7" style="font-size: 25px"><b>7. Holiday to Jakarta & Bandung</b></p>
-        <p class="heading" id="8" style="font-size: 25px"><b>8. Cerita tentang Talent</b></p>
+        <p class="heading" id="8" style="font-size: 25px"><b>8. Cerita tentang Talent dengan programnya</b></p>
         <p class="heading" id="9" style="font-size: 25px"><b>9. Masa depan dan impian</b></p>
         <p class="heading" id="10" style="font-size: 25px"><b>10. [Under Construction]</b></p>
         <br>
@@ -251,7 +270,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 3 Mei 2024<br>
+        Terakhir diupdate: 7 Mei 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
