--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
 			<img src="images/blank-profile.jpg" width="40" style="border-radius:50%; padding-top:2px">
 		</div>
         <!-- <font size="6" color="white"><b>SEBUAH WEBSITE</b></font> -->
-        <div style="font-size:30px; color:white; padding"><b>SEBUAH WEBSITE</b></div>
+        <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
         <div class="clearfix"></div>
     </div>
     <div class="container">
@@ -112,19 +112,24 @@
             <p>Penghitung Waktu</p>
             <a href="projects/Penghitung Waktu.html">Penghitung Waktu</a>
         </div>
-        <p class="heading" id="7" style="font-size: 25px"><b>7. Labirin / Maze</b></p>
+        <p class="heading" id="7" style="font-size: 25px"><b>7. Kumpulan Permainan (Labirin / Maze)</b></p>
 	    <div class="container2">
             <p>Permainan Labirin dalam Puzzle<br>Tanggal dibuat: 6 Feb 2024</p>
-            <a href="projects/Labirin.html">Labirin</a>
+            <a href="projects/Kumpulan Permainan.html">Kumpulan Permainan</a>
         </div>
         <p class="heading" id="8" style="font-size: 25px"><b>8. Kumpulan Animasi</b></p>
         <div class="container2">
             <p>Kumpulan Animasi<br>Tanggal dibuat: 21 Feb 2024</p>
             <a href="projects/Kumpulan Animasi.html">Kumpulan Animasi</a>
         </div>
-		<p class="heading" id="9" style="font-size: 25px"><b>9. Kalkulator Sederhana (v1.8.1)</b></p>
+        <p class="heading" id="8" style="font-size: 25px"><b>9. Kalkulator Peluang</b></p>
+        <div class="container2">
+            <p>Kalkulator Peluang<br>Bulan dibuat: Mei 2024</p>
+            <a href="projects/Kalkulator Peluang.html">Kalkulator Peluang (Belum ada)</a>
+        </div>
+		<p class="heading" id="9" style="font-size: 25px"><b>10. Kalkulator Sederhana (v1.8.1)</b></p>
         <div class="container2"><p><i>Coming Soon</i></p></div>
-		<p class="heading" id="10" style="font-size: 25px"><b>10. Project dari Website Lain (v1.9)</b></p>
+		<p class="heading" id="10" style="font-size: 25px"><b>11. Project dari Website Lain (v1.9)</b></p>
         <div class="container2"><p><i>Coming Soon</i></p></div>
 
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
