--- a/projects/Kumpulan Animasi.html
+++ b/projects/Kumpulan Animasi.html
@@ -7,14 +7,18 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
 <style>
+    /* Fonts */
+    @import url("https://fonts.googleapis.com/css?family=Inter");
+    @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
+    
     body {
         background-color: #f0e0a0;
         /* font-family:"Helvetica",sans-serif; */
         font-family:"Source Sans Pro",sans-serif;
     }
-	p {
-	    font-size: 18px;
-	}
+    p {
+        font-size: 18px;
+    }
     .heading {
         /* font-family:"Raleway Medium",sans-serif; */
         font-family:"Inter",sans-serif;
@@ -108,7 +112,7 @@
     <p style="font-size:20px;"><b>Beberapa Link:</b></p>
 	<ul>
 		<li><a href="ka1.html">Kumpulan Animasi - Bola</a></li>
-		<li><a href="ka2.html">Kumpulan Animasi 2</a></li>
+		<li><a href="ka2.html">Kumpulan Animasi - Kecepatan</a></li>
         <li><a href="ka3.html">Kumpulan Animasi 3</a></li>
 	</ul>
 
@@ -116,6 +120,6 @@
     <a class="button2" href="../projects.html">Kembali ke menu projects</a>
 
     <br><br>
-    <p>Terakhir diupdate: 21 Feb 2024</p>
+    <p>Terakhir diupdate: 12 Mei 2024</p>
 </body>
 </html>
