--- a/projects/Labirin.html
+++ b/projects/Labirin.html
@@ -12,9 +12,11 @@
     @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
     
     body {
-        background-color: #a0e0d0;
+        background-color: #c0f0e8;
         /* font-family:"Helvetica",sans-serif; */
         font-family:"Source Sans Pro",sans-serif;
+        margin: 0 auto;
+        width: 90%;
     }
 	p {
 	    font-size: 18px;
@@ -157,10 +159,11 @@
 	<p>W = Ke atas<br>A = Ke kiri<br>S = Ke bawah<br>D = Ke kanan</p>
 	<br><br>
     
+    <a class="button2" href="Kumpulan Permainan.html">Kembali ke menu kumpulan permainan</a><br>
     <a class="button2" href="../projects.html">Kembali ke menu projects</a>
     <br><br>
 
-    <p>Terakhir diupdate: 22 Feb 2024</p>
+    <p>Terakhir diupdate: 12 Mei 2024</p>
 
 	<script>
         var c = document.getElementById("myCanvas");
